fix the overlap issue in send to contact

--- a/css/global.css
+++ b/css/global.css
@@ -656,7 +656,7 @@ html {
 
 .Fax-content-confirm ul li {
     display: flex;
-    width: 330px;
+    width: 310px;
 }
 
 .Fax-content ul li {
